# Vibe

./: .dockerignore  .gitignore  .htpasswd  AGENT_IMPROVEMENTS.md  CHAT_SCROLL_FIX.md  CONVERSATION_INTERFACE.md  DEBUGGING_GUIDE.md  DEPLOYMENT.md  DOCKER_DEVELOPMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LOGGING_GUIDE.md  MICROAGENTS_README.md  Makefile  OPENHANDS_IMPLEMENTATION_SUMMARY.md  README.md  RIFF_ADOPTION_SUMMARY.md  RUNTIME_INTEGRATION_SUMMARY.md  SETUP_WINDOW.md  entrypoint.sh  eslint.config.js  example_usage.py  fly.toml  git-watcher.sh  index.html  load-agent-image.sh  microagent_loader.py  nginx.conf  package-lock.json  package.json  requirements.txt  service-restarter.sh  start-services.sh  supervisord.conf  tailwind.config.js  test-docker-setup.sh  test_chat_functionality.py  test_endpoints.py  test_riff_adoption.py  vercel.json  (+1 more)
api/: hello.py  vibes.py
backend/: .flake8  AGENT_IMPLEMENTATION_SUMMARY.md  EVENT_SERIALIZATION_SUMMARY.md  LOGGING.md  OPENHANDS_INTEGRATION.md  README.md  REFACTORING_SUMMARY.md  REMOTE_RUNTIME_README.md  agent_loop.py  app.py  conversations.py  demo_conversation.py  docker_agent_loop.py  gunicorn.conf.py  hybrid_agent_loop.py  keys.py  mocks.py  package-lock.json  package.json  projects.py  pyproject.toml  remote_agent_loop.py  remote_runtime_client.py  (+11 more)
cli/: README.md  build.bat  build.sh  pyproject.toml
cli/openvibe_cli/: __init__.py  api_client.py  backend.py  config.py  main.py
cli/openvibe_cli/backend_modules/: __init__.py  agent_loop.py
cli/openvibe_cli/backend_modules/storage/: base_storage.py
cli/openvibe_cli/backend_modules/utils/: logging.py  repository.py
cli/openvibe_cli/commands/: __init__.py  apps.py  chat.py  integrations.py  riffs.py  setup.py  status.py
(+192 files in other folders)
