[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openvibe-cli"
version = "0.1.0"
description = "OpenVibe CLI - Command line interface for OpenVibe that mirrors the frontend functionality"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "OpenVibe Team", email = "openhands@all-hands.dev"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "prompt-toolkit>=3.0.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "python-dateutil>=2.8.0",
    # Backend dependencies
    "PyNaCl>=1.5.0",
    "openhands-sdk @ git+https://github.com/all-hands-ai/agent-sdk.git@main#subdirectory=openhands/sdk",
    "openhands-tools @ git+https://github.com/all-hands-ai/agent-sdk.git@main#subdirectory=openhands/tools",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "types-requests",
]
build = [
    "pyinstaller>=6.0.0",
]

[project.scripts]
openvibe = "openvibe_cli.main:main"

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true